<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.hiphop_trivia.MainActivity">


    <Button
        android:id="@+id/instructions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="instructions"
        android:onClick="showInstructions"/>

    <TextView
        android:id="@+id/game_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter name"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:paddingTop="16dp"
        />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="1"
            android:layout_marginTop="16dp">
        <RadioButton
            android:id="@+id/q1CheckBox1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q1CheckBox2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q1CheckBox3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1Answer3"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        </RadioGroup>
    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:paddingTop="16dp"
        />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="1"
        android:layout_marginTop="16dp">
        <CheckBox
            android:id="@+id/q2CheckBox1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <CheckBox
            android:id="@+id/q2CheckBox2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <CheckBox
            android:id="@+id/q2CheckBox3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        android:paddingTop="16dp"
        />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="1"
        android:layout_marginTop="16dp">
        <RadioButton
            android:id="@+id/q3CheckBox1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q3CheckBox2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q3CheckBox3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3Answer3"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <TextView
        android:id="@+id/question4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question4"
        android:paddingTop="16dp"
        />
    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="1"
        android:layout_marginTop="16dp">
        <RadioButton
            android:id="@+id/q4CheckBox1"                                                                                                                                                                                                                 
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall" />
        <RadioButton
            android:id="@+id/q4CheckBox2"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q4CheckBox3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/q4Answer3"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <TextView
        android:id="@+id/question5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question5"
        android:paddingTop="16dp"
        />
    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="1"
        android:layout_marginTop="16dp">
        <RadioButton
            android:id="@+id/q5CheckBox1"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall" />
        <RadioButton
            android:id="@+id/q5CheckBox2"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q5CheckBox3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/q5Answer3"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <TextView
        android:id="@+id/question6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question6"
        android:paddingTop="16dp"
        />
    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="1"
        android:layout_marginTop="16dp">
        <RadioButton
            android:id="@+id/q6CheckBox1"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q6Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall" />
        <RadioButton
            android:id="@+id/q6CheckBox2"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q6Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q6CheckBox3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/q6Answer3"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <TextView
    android:id="@+id/question7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question7"
    android:paddingTop="16dp"
    />
    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="1"
        android:layout_marginTop="16dp">
        <RadioButton
            android:id="@+id/q7CheckBox1"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q7Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall" />
        <RadioButton
            android:id="@+id/q7CheckBox2"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q7Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q7CheckBox3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/q7Answer3"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <TextView
    android:id="@+id/question8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question8"
    android:paddingTop="16dp"
    />
    <RadioGroup
        android:id="@+id/radioGroup8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="1"
        android:layout_marginTop="16dp">
        <RadioButton
            android:id="@+id/q8CheckBox1"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q8Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall" />
        <RadioButton
            android:id="@+id/q8CheckBox2"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q8Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q8CheckBox3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/q8Answer3"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <TextView
    android:id="@+id/questio9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question9"
    android:paddingTop="16dp"
    />
    <RadioGroup
        android:id="@+id/radioGroup9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="1"
        android:layout_marginTop="16dp">
        <RadioButton
            android:id="@+id/q9CheckBox1"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q9Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall" />
        <RadioButton
            android:id="@+id/q9CheckBox2"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q9Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q9CheckBox3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/q9Answer3"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <TextView
    android:id="@+id/question10"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question10"
    android:paddingTop="16dp"
    />
    <RadioGroup
        android:id="@+id/radioGroup10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="1"
        android:layout_marginTop="16dp">
        <RadioButton
            android:id="@+id/q10CheckBox1"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q10Answer1"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall" />
        <RadioButton
            android:id="@+id/q10CheckBox2"
            android:layout_weight=".50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q10Answer2"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/q10CheckBox3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/q10Answer3"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/submitTest"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitTest"
        android:layout_marginRight="10dp"
        android:text="@string/submit" />
        <Button
            android:id="@+id/clearForm"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="clearForm"
            android:layout_alignParentRight="true"
            android:text="@string/clearForm" />
    </LinearLayout>
    <TextView
        android:id="@+id/yourResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Your Results:"
        android:visibility="gone"
        android:textAllCaps="true" />
    <TextView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        android:visibility="gone"
        android:textAllCaps="true" />

</LinearLayout>
</ScrollView>